Jueves 4 Octubre 2h -Cambiar la tabla a una vista diferente -Rellenarla con 20 alumnos -Modificarlo en el formulario

--- a/Ejemplo4/App.xaml
+++ b/Ejemplo4/App.xaml
@@ -20,6 +20,10 @@
                 <views:StudentView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewmodels:StudentTableViewModel}">
+                <views:StudentTableView/>
+            </DataTemplate>
+
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
