--- a/Ejemplo4/MainWindow.xaml
+++ b/Ejemplo4/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
         xmlns:local="clr-namespace:Ejemplo4"
         mc:Ignorable="d"
-        Title="MainWindow" Height="850" Width="1250">
+        Title="MainWindow" Height="900" Width="1250">
     <StackPanel Background="Aqua">
         <!--
         <Image gif:ImageBehavior.AnimatedSource="Resources/Gif/homer.gif" Height="200" HorizontalAlignment="Left"/>
@@ -16,6 +16,7 @@
             <Button Content="HOME" Command="{Binding UpdateViewCommand}" CommandParameter="home"/>
             <Button Content="LOGIN" Command="{Binding UpdateViewCommand}" CommandParameter="login"/>
             <Button Content="ESTUDIANTE" Command="{Binding UpdateViewCommand}" CommandParameter="student"/>
+            <Button Content="TABLA" Command="{Binding UpdateViewCommand}" CommandParameter="tabla"/>
         </StackPanel>
 
         <ContentControl Content="{Binding SelectedViewModel}"/>
