--- a/Ejemplo4/Views/StudentTableView.xaml
+++ b/Ejemplo4/Views/StudentTableView.xaml
@@ -19,10 +19,14 @@
             <ColumnDefinition/>
             <ColumnDefinition Width="450"/>
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
         
         <!--Este StackPanel es la tabla-->
         
-        <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center">
+        <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Grid.RowSpan="2">
             <ListView x:Name="studentListView" IsEnabled="{Binding CambiarEstudiante}" ItemsSource="{Binding ListaEstudiantes}" MaxHeight="600" SelectionChanged="studentListView_SelectionChanged">
 
                 <i:Interaction.Triggers>
@@ -46,7 +50,7 @@
         
         <!--Este StackPanel es el Formulario-->
         
-        <StackPanel Grid.Column="1" Background="LightGreen">
+        <StackPanel Grid.Column="1" Background="LightGreen" x:Name="stackDatosEstudiante">
 
             <materialDesign:Card Padding="32" Margin="16">
                 <StackPanel>
@@ -80,7 +84,7 @@
                         <ComboBoxItem Content="Tercero"/>
                     </ComboBox>
 
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="30">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10,20,10,0">
                         <Button x:Name="btnEditar" Content="Editar" Width="120" Margin="5" Command="{Binding StudentCommand}" CommandParameter="editarHabilitado" Click="btnEditar_Click" />
 
                         <Button x:Name="btnGuardar" Content="Guardar" Width="120" Margin="5" Command="{Binding StudentCommand}" CommandParameter="guardar" Click="btnGuardar_Click"/>
@@ -90,8 +94,52 @@
 
 
             </materialDesign:Card>
-
+            
         </StackPanel>
-        
+
+        <StackPanel  Grid.Column="1" Grid.Row="1" Background="LightCyan" x:Name="stackCalificaciones">
+            <materialDesign:Card Padding="5" Margin="10">
+                <StackPanel>
+                    <TextBlock Text="Calificaciones" HorizontalAlignment="Center" Margin="15" FontSize="24" FontWeight="DemiBold"/>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="250"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Grid.Row="0" Grid.Column="0" Text="Desarrollo de Interfaces:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
+                        <ComboBox Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarCalificaciones}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.DI}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" Height="46" VerticalAlignment="Top" />
+
+                        <TextBlock Grid.Row="1" Grid.Column="0" TextWrapping="Wrap" TextAlignment="Right" Text="Programación de Servicios y Procesos:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
+                        <ComboBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarCalificaciones}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.PSP}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+
+                        <TextBlock Grid.Row="2" Grid.Column="0" TextWrapping="Wrap" TextAlignment="Right" Text="Programación Multimedia y Dispositivos Móviles:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
+                        <ComboBox Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarCalificaciones}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.PMDM}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+
+                        <TextBlock Grid.Row="3" Grid.Column="0" TextWrapping="Wrap" TextAlignment="Right" Text="Sistemas de Gestión empresarial:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
+                        <ComboBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarCalificaciones}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.SGE}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+
+                        <TextBlock Grid.Row="4" Grid.Column="0" TextWrapping="Wrap" TextAlignment="Right" Text="Acceso a Datos:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
+                        <ComboBox Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarCalificaciones}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.AD}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+
+                        <TextBlock Grid.Row="5" Grid.Column="0" TextWrapping="Wrap" TextAlignment="Right" Text="Empresa e Iniciativa Emprendedora:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
+                        <ComboBox Grid.Row="5" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarCalificaciones}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.EIE}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+
+                    </Grid>
+                </StackPanel>
+            </materialDesign:Card>
+            
+        </StackPanel>
+
+
     </Grid>
 </UserControl>
