--- a/Ejemplo4/Views/StudentTableView.xaml
+++ b/Ejemplo4/Views/StudentTableView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:Ejemplo4.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             x:Name="vistaEstudiantes"
              mc:Ignorable="d" >
 
     <i:Interaction.Triggers>
@@ -34,7 +35,7 @@
         <!--Este StackPanel es la tabla-->
         
         <StackPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Grid.RowSpan="2">
-            <ListView x:Name="studentListView" IsEnabled="{Binding CambiarEstudiante}" ItemsSource="{Binding ListaEstudiantes}" MaxHeight="600" SelectionChanged="studentListView_SelectionChanged">
+            <ListView x:Name="studentListView" IsEnabled="{Binding ElementName=vistaEstudiantes, Path=CambiarEstudiante}" ItemsSource="{Binding ListaEstudiantes}" MaxHeight="600" SelectionChanged="studentListView_SelectionChanged">
 
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="SelectionChanged">
@@ -57,7 +58,7 @@
         
         <!--Este StackPanel es el Formulario-->
         
-        <StackPanel Grid.Row="2" Grid.Column="1" Background="LightGreen" x:Name="stackDatosEstudiante" Visibility="Collapsed">
+        <StackPanel Grid.Row="2" Grid.Column="1" Background="LightGreen" x:Name="stackDatosEstudiante" Visibility="Visible">
 
             <materialDesign:Card Padding="32" Margin="16">
                 <StackPanel>
@@ -69,32 +70,35 @@
                             FontSize="16"
                             materialDesign:TextFieldAssist.HasClearButton="True"
                             Text="{Binding CurrentStudent._id, UpdateSourceTrigger=PropertyChanged}"
-                            IsEnabled="{Binding EditarActivado}"/>
+                            IsEnabled="False"/>
 
                     <TextBox materialDesign:HintAssist.Hint="Nombre:" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                             VerticalAlignment="Center" Width="200"
                             FontSize="16"
                             materialDesign:TextFieldAssist.HasClearButton="True"
                             Text="{Binding CurrentStudent.Nombre, UpdateSourceTrigger=PropertyChanged}"
-                            IsEnabled="{Binding EditarActivado}"/>
+                            IsEnabled="{Binding ElementName=vistaEstudiantes, Path=EditarActivado}"/>
 
-                    <DatePicker Margin="10" Width="200" HorizontalContentAlignment="Left" 
+                    <DatePicker x:Name="datePickerFecha"
+                                Margin="10" Width="200" HorizontalContentAlignment="Left" 
                                 Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
                                 materialDesign:HintAssist.Hint="Fecha de Nacimiento:"
                                 FontSize="16"
                                 SelectedDate="{Binding CurrentStudent.Fecha, StringFormat=dd/MM/yyyy}"
-                                IsEnabled="{Binding EditarActivado}"/>
+                                IsEnabled="{Binding ElementName=vistaEstudiantes, Path=EditarActivado}"/>
 
-                    <ComboBox Width="200" materialDesign:HintAssist.Hint="Curso:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" Text="{Binding CurrentStudent.Curso}" IsEnabled="{Binding EditarActivado}" >
+                    <ComboBox Width="200" materialDesign:HintAssist.Hint="Curso:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" Text="{Binding CurrentStudent.Curso}" IsEnabled="{Binding ElementName=vistaEstudiantes, Path=EditarActivado}" >
                         <ComboBoxItem Content="Primero"/>
                         <ComboBoxItem Content="Segundo"/>
                         <ComboBoxItem Content="Tercero"/>
                     </ComboBox>
-
+                    
+                    <TextBlock x:Name="txtWarning" Text="{Binding TXWarning}" TextAlignment="Center" Margin="0,20,0,0" FontWeight="Bold" Foreground="Red"/>
+                    
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10,20,10,0">
                         <Button x:Name="btnEditar" Content="Editar" Width="120" Margin="5" Command="{Binding StudentCommand}" CommandParameter="editarHabilitado" Click="btnEditar_Click" />
 
-                        <Button x:Name="btnGuardar" Content="Guardar" Width="120" Margin="5" Command="{Binding StudentCommand}" CommandParameter="guardar" Click="btnGuardar_Click"/>
+                        <Button x:Name="btnGuardar" Content="Guardar" Width="120" Margin="5" Command="{Binding GuardarEstudianteCommand}" CommandParameter="{Binding ElementName=vistaEstudiantes}" Click="btnGuardar_Click"/>
                         <Button x:Name="btnCancelar" Content="Cancelar" Width="120" Margin="5" Click="btnCancelar_Click" Command="{Binding StudentCommand}" CommandParameter="cancelarEditar"/>
                     </StackPanel>
                 </StackPanel>
@@ -104,7 +108,7 @@
             
         </StackPanel>
 
-        <StackPanel Grid.Row="2" Grid.Column="1" Background="LightCyan" x:Name="stackCalificaciones" Visibility="Visible">
+        <StackPanel Grid.Row="2" Grid.Column="1" Background="LightCyan" x:Name="stackCalificaciones" Visibility="Collapsed">
             <materialDesign:Card Padding="5" Margin="10">
                 <StackPanel>
                     <TextBlock Text="Calificaciones" HorizontalAlignment="Center" Margin="15" FontSize="24" FontWeight="DemiBold"/>
@@ -124,28 +128,28 @@
                         </Grid.RowDefinitions>
 
                         <TextBlock Grid.Row="0" Grid.Column="0" Text="Desarrollo de Interfaces:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
-                        <ComboBox Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.DI}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" Height="46" VerticalAlignment="Top" />
+                        <ComboBox Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding ElementName=vistaEstudiantes, Path=EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.DI}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" Height="46" VerticalAlignment="Top" />
 
                         <TextBlock Grid.Row="1" Grid.Column="0" TextWrapping="Wrap" TextAlignment="Right" Text="Programación de Servicios y Procesos:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
-                        <ComboBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.PSP}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+                        <ComboBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding ElementName=vistaEstudiantes, Path=EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.PSP}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
 
                         <TextBlock Grid.Row="2" Grid.Column="0" TextWrapping="Wrap" TextAlignment="Right" Text="Programación Multimedia y Dispositivos Móviles:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
-                        <ComboBox Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.PMDM}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+                        <ComboBox Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding ElementName=vistaEstudiantes, Path=EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.PMDM}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
 
                         <TextBlock Grid.Row="3" Grid.Column="0" TextWrapping="Wrap" TextAlignment="Right" Text="Sistemas de Gestión empresarial:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
-                        <ComboBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.SGE}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+                        <ComboBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding ElementName=vistaEstudiantes, Path=EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.SGE}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
 
                         <TextBlock Grid.Row="4" Grid.Column="0" TextWrapping="Wrap" TextAlignment="Right" Text="Acceso a Datos:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
-                        <ComboBox Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.AD}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+                        <ComboBox Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding ElementName=vistaEstudiantes, Path=EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.AD}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
 
                         <TextBlock Grid.Row="5" Grid.Column="0" TextWrapping="Wrap" TextAlignment="Right" Text="Empresa e Iniciativa Emprendedora:" HorizontalAlignment="Right" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Bottom"/>
-                        <ComboBox Grid.Row="5" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.EIE}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+                        <ComboBox Grid.Row="5" Grid.Column="1" HorizontalAlignment="Left" IsEnabled="{Binding ElementName=vistaEstudiantes, Path=EditarNotasActivado}" ItemsSource="{Binding listaNumeros}" Text="{Binding CurrentStudent.Notas.EIE}" Width="60" Margin="25,0,0,0" materialDesign:HintAssist.Hint="Nota:" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
 
                     </Grid>
                     <StackPanel Orientation="Horizontal" Margin="10" HorizontalAlignment="Center">
                     <Button x:Name="btnEditarNota" Content="Editar" Width="120" Margin="5" Command="{Binding StudentCommand}" CommandParameter="editarHabilitado" Click="btnEditarNota_Click" />
-                    <Button x:Name="btnGuardarNota" Content="Guardar" Width="120" Margin="5" Command="{Binding StudentCommand}" CommandParameter="guardar" Click="btnGuardarNota_Click"/>
-                        <Button x:Name="btnCancelarNota" Content="Cancelar" Width="120" Margin="5" Command="{Binding StudentCommand}" CommandParameter="cancelar" Click="btnCancelarNota_Click"/>
+                    <Button x:Name="btnGuardarNota" Content="Guardar" Width="120" Margin="5" Command="{Binding EditarNotasCommand}" CommandParameter="{Binding ElementName=vistaEstudiantes}" Click="btnGuardarNota_Click"/>
+                    <Button x:Name="btnCancelarNota" Content="Cancelar" Width="120" Margin="5" Command="{Binding StudentCommand}" CommandParameter="cancelar" Click="btnCancelarNota_Click"/>
                     </StackPanel>
                 </StackPanel>
             </materialDesign:Card>
